# HotDesk

./: .gitignore  README.md  algorithm.py  backend.py  crud.py  dummy.py  models.py  officeDB.py  pyproject.toml  schema.py  sql_app.db  userDB.py  workspace.py
Workspaces/: desklayout.csv  example_seats.txt
app/: config.py  crud.py  crud_dummy.py  database.py  dependencies.py  dummy.py  main.py  models.py  schemas.py
app/algo/: k_furthest.py  simple.py  util.py
app/routers/: admin.py  bookings.py  plans.py
backend/: README.md  __init__.py  sql_app.db
backend/app/: config.py  crud.py  dependencies.py  dummy.py  main.py  models.py  schemas.py
backend/app/algo/: default.py  k_furthest.py
backend/app/routers/: admin.py  seats.py  users.py
backend/scripts/: init_db.py  run_algo.py  seed_db.py
backend/tests/: conftest.py  test_api.py
backend/workspaces/: example_seats.txt
frontend/: api.test.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: api.test.js  config.js  index.css  index.js  setupTests.js  usePersistState.js
frontend/src/Account/: Account.jsx  Account.test.js  account.css
frontend/src/Admin/: Admin.jsx  Admin.test.js  admin.css
frontend/src/Book/: Book.jsx  Book.test.js  book.css
frontend/src/Desk/: Desk.jsx
frontend/src/Home/: Home.jsx  Home.test.js  home.css
frontend/src/Login/: Login.jsx  (+2 more)
scripts/: create_plan.py  init_db.py  run_algo.py  workspace.py
static/: booking.js  index.js  login.js
templates/: booking.html  index.html  login.html
tests/: __init__.py  test_api.py
(+16 files in other folders)
