[tool.poetry]
name = "hotdesk"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
